# automatic

gongqi/: CMakeLists.txt  README.md
gongqi/include/: Apply.h  BombCross.h  Count.h  Duan.h  Geometry.h  Gong.h  KTBC.h  MCTS.h  Move.h  MoveGen.h  Rules.h  STBC.h  State.h  TT.h  Types.h  Undo.h  Workspace.h  Zobrist.h
gongqi/src/: Apply.cpp  BombCross.cpp  Count.cpp  Duan.cpp  Geometry.cpp  Gong.cpp  KTBC.cpp  MCTS.cpp  MoveGen.cpp  Rules.cpp  STBC.cpp  TT.cpp  Zobrist.cpp  main.cpp
gongqi/tests/: test_apply_sequence.cpp  test_bombcross.cpp  test_duan.cpp  test_framework.h  test_gong.cpp  test_ktbc.cpp  test_main.cpp  test_mcts_smoke.cpp  test_stbc.cpp
